--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node": "^10.5.2",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
+    "bootstrap": "^4.1.2",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
     "typescript": "^2.9.2"
